src/styles/variables.scss
$surface-ground: #18181b;
$surface-border: #dfe7ef;
$surface-section: #18181b;
$text-color: white;
$text-color-secondary: white;
$primary-color: #34f5dd;
$primary-color-light: #34f5f5;
$main-black: #3f3f46;
$red-color: #ff0044aa;
$gallery-gap: 1vw;

%light-blue-glass {
  background: radial-gradient(circle at 20% 30%, rgba(52, 245, 245, 0.5) 0%, transparent 122%),
    radial-gradient(circle at 80% 20%, rgba(52, 211, 245, 0.4) 0%, transparent 60%),
    radial-gradient(circle at 60% 80%, rgba(45, 212, 245, 0.4) 0%, transparent 55%),
    radial-gradient(circle at 30% 60%, rgba(16, 185, 245, 0.3) 0%, transparent 45%),
    linear-gradient(
      135deg,
      rgba(24, 24, 27, 0.3) 0%,
      rgba(26, 26, 29, 0.2) 25%,
      rgba(18, 18, 20, 0.3) 50%,
      rgba(26, 26, 29, 0.2) 75%,
      rgba(24, 24, 27, 0.3) 100%
    );
  border: 1px solid rgba(52, 245, 221, 0.1);
  box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
}

%green-glass {
  background: radial-gradient(circle at 20% 30%, rgba(52, 245, 221, 0.5) 0%, transparent 122%),
    radial-gradient(circle at 80% 20%, rgba(52, 211, 204, 0.4) 0%, transparent 60%),
    radial-gradient(circle at 60% 80%, rgba(45, 212, 191, 0.4) 0%, transparent 55%),
    radial-gradient(circle at 30% 60%, rgba(16, 185, 129, 0.3) 0%, transparent 45%),
    linear-gradient(
      135deg,
      rgba(24, 24, 27, 0.3) 0%,
      rgba(26, 26, 29, 0.2) 25%,
      rgba(18, 18, 20, 0.3) 50%,
      rgba(26, 26, 29, 0.2) 75%,
      rgba(24, 24, 27, 0.3) 100%
    );
  border: 1px solid rgba(52, 245, 221, 0.1);
  box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
}

%small-scrollbar {
  &::-webkit-scrollbar {
    width: 6px;
  }

  &::-webkit-scrollbar-track {
    background: rgba(255, 255, 255, 0.1);
    border-radius: 3px;
  }

  &::-webkit-scrollbar-thumb {
    background: rgba(255, 255, 255, 0.3);
    border-radius: 3px;

    &:hover {
      background: rgba(255, 255, 255, 0.5);
    }
  }
}

%blured-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0.95;
  background: radial-gradient(circle, rgba(52, 245, 221, 0.1) 0%, transparent 70%),
    linear-gradient(135deg, rgba(24, 24, 27, 0.9) 0%, rgba(24, 24, 27, 0.95) 100%);
  z-index: 9999;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
}

%text-primary {
  color: $primary-color;
  font-weight: 600;
}

%text-small-primary {
  color: $primary-color;
  font-weight: 400;
}

%text-white {
  color: $text-color;
  font-weight: 600;
}

%text-secondary {
  background: white;
  background-size: 200% 200%;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  text-shadow: 0 4px 8px rgba(52, 245, 221, 0.3);
  filter: drop-shadow(0 2px 4px rgba(52, 245, 221, 0.3));
}

%auth-base {
  display: flex;
  justify-content: center;
  align-items: flex-start;

  padding: 40px 20px;
  box-sizing: border-box;

  .form-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    width: 100%;
    max-width: 400px;
    background: rgba(24, 24, 27, 0.42);
    border: 1px solid $surface-border;
    border-radius: 8px;
    padding: 40px;
    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);

    .form-content {
      display: flex;
      flex-direction: column;
      gap: 22px;
      width: 100%;

      .buttons-container {
        display: flex;
        width: 100%;
        justify-content: space-between;
      }
    }
  }

  @media (max-width: 768px) {
    & {
      padding: 20px 15px;

      .form-container {
        max-width: 400px;
        padding: 30px 20px;

        .google-button-container {
          margin-top: 15px;
        }
      }
    }
  }

  @media (max-width: 510px) {
    & {
      justify-content: center;
    }
  }
}

%menu-base {
  display: flex;
  align-items: center;
  gap: 4px;
  cursor: pointer;
  margin-left: 8px;
  min-height: 34px;

  .p-menuitem-text {
    display: none !important;
  }

  .label {
    min-width: 19px;
    text-align: center;
    text-wrap: nowrap;
  }

  svg {
    width: 18px;
    height: 14px;
  }

  @media (max-width: 380px) {
    .lang-icon {
      display: none;
    }
  }
}

%form-control-base {
  display: flex;
  flex-direction: column;
  width: 100%;
  max-width: 686px;
  gap: 7px;
  color: $text-color-secondary;

  textarea,
  input {
    font-family: Inter !important;
    font-style: normal !important;
    line-height: normal !important;
    font-size: 14px !important;
    font-weight: 400 !important;
    color: $text-color-secondary;
  }

  input {
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 7px 10.5px;
    background-color: #09090b;
    border: 1px solid #52525b;
    box-shadow: none;
    gap: 10.5px;
    width: 100%;
    height: 33px;
    border-radius: 6px;
    flex: none;
    order: 1;
    align-self: stretch;
    flex-grow: 0;
  }

  input.regular-input:focus {
    border: 1px solid $primary-color !important;
    outline: none;
  }

  .p-datepicker,
  .p-password {
    width: 100%;
  }

  p-password.ng-invalid.ng-touched {
    border: none !important;
  }
}

